<resources>
    <string name="app_name">DT-SCREEN</string>
    <string name="themesanasang">Themesanasang.com</string>
    <string name="action_settings">settings</string>

    <!-- from login -->
    <string name="txtWelcome">ยินดีตอนรับ!</string>
    <string name="txtUsername">ชื่อผู้ใช้งาน</string>
    <string name="txtPassword">รหัสผ่าน</string>
    <string name="btnLogin">เข้าสู่ระบบ</string>
    <!-- footer login -->
    <string name="createBy">©2016 by themesanasang</string>

    <!-- from search -->
    <string name="menu_search">ค้นหา</string>
    <string name="search_hint">ค้นหา</string>
    <string name="search_result">ผลการค้นหา</string>

    <!-- from list patient screen -->
    <string name="titlePatientList">รายการคัดกรอง</string>
    <string name="listCID">รหัสบัตรประชาชน: </string>
    <string name="listRegdate">วันที่คัดกรอง: </string>

    <!-- from screen -->
    <string name="titleScreen">คัดกรองเบื้องต้น</string>
    <string name="txtFullname">ชื่อ-สกุล</string>
    <string name="txtCID">รหัสบัตรประชาชน</string>
    <string name="txtAGE">อายุ</string>
    <string name="txtAddress">ที่อยู่</string>

    <!-- from profile -->
    <string name="titleprofile">ข้อมูลส่วนตัว</string>
    <string name="txtUserProfile">คุณ: </string>

    <!-- Btn Save -->
    <string name="btnSave">บันทึก</string>
    <string name="btnEdit">แก้ไข</string>
    <string name="btnDelete">ลบ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
