<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <com.nth.themesanasang.dtscreen.CustomTextView
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textColor="@color/primary_blue"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <!--  User Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <com.nth.themesanasang.dtscreen.CustomEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:hint="@string/txtUsername" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <com.nth.themesanasang.dtscreen.CustomEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:hint="@string/txtPassword" />
        </android.support.design.widget.TextInputLayout>

        <!--  BtnLogin Label -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/btnLogin"/>

        <com.nth.themesanasang.dtscreen.CustomTextView
            android:id="@+id/link_company"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/createBy"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

</ScrollView>