<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:orientation="vertical"
tools:context="com.nth.themesanasang.dtscreen.ProfileFragment">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.nth.themesanasang.dtscreen.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="16sp"
        android:padding="16dp"
        android:text="@string/titleprofile"
        android:background="@color/iron"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.nth.themesanasang.dtscreen.CustomEditText
                    android:id="@+id/pro_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:hint="@string/txtFullname" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.nth.themesanasang.dtscreen.CustomEditText
                    android:id="@+id/pro_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:hint="@string/txtUsername" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.nth.themesanasang.dtscreen.CustomEditText
                    android:id="@+id/pro_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:hint="@string/txtPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.nth.themesanasang.dtscreen.CustomEditText
                    android:id="@+id/pro_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="5"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:hint="@string/txtAddress" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSaveProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/btnSave"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>

</LinearLayout>
