<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.themesanasang.scandocnth.ScreenFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <com.example.themesanasang.scandocnth.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="20dp"
            android:text="คัดกรองเบื้องต้น"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/ic_account_circle"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <com.example.themesanasang.scandocnth.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:hint="@string/txtCID" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <com.example.themesanasang.scandocnth.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:hint="@string/txtFullname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <com.example.themesanasang.scandocnth.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:minLines="3"
                android:scrollbars="vertical"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:hint="@string/txtAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCapturePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#cccccc"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="ถ่ายภาพที่ 1"
            android:textColor="@color/white" />

        <!--  BtnLogin Label -->
        <android.support.v7.widget.AppCompatButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/btnSave"/>

    </LinearLayout>

    </ScrollView>
</LinearLayout>
